src/snapshots/datapackage_convert__tests__add_field_json_games.csv.snap
---
source: src/lib.rs
assertion_line: 310
expression: lines
---
- "id,title,title2"
- "1,game1_base,"
- "2,game2_base,"
- "2,,game1_add_field"

