src/snapshots/datapackage_convert__tests__csvs_to_sqlite.snap
---
source: src/lib.rs
expression: output
---
- - 1
  - game1_add_resource
- - 2
  - game2_add_resource

